2010-10-05 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Better packaging from makefile.

2010-09-04 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Make mpi-start runnable at MacOS.
	* Fixed typos in mpich/mpich2 modules.
	* Added automatic check for prefix in openmpi module.

2010-08-13 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Moved to mercurial
	* Lots of code cleanup
	* Changed versioning schema, now we are at 0.1.0

2010-03-18 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Code cleanup, fix in cptoshared.

2010-03-01 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Several fixes in the compiler flag substitution. 

2010-02-10 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* fixed the mpiexec file distribution

2010-02-02 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* fixed cptoshared file distribution

2010-01-21 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* add local hooks support. 
	* add compiler hooks support.

2009-12-11 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* add MPI_<FLAVOUR>_PATH support.
	* fixed file distribution.

2007-09-19  Sven Stork  <hpcstork _AT_ hlrs.de>
	* simplify GLOBUS_TCP_PORT_RANGE export logic for Open MPI module

2007-09-05  Sven Stork  <hpcstork _AT_ hlrs.de>

	* replace source with .
	* more POSIX compliant fixes

2007-09-04  Sven Stork  <hpcstork _AT_ hlrs.de>

	* replace [] with test for protability 

2007-08-22  Sven Stork  <hpcstork _AT_ hlrs.de>

	* add MPI_START_DISTRIBUTE_PROXY to force mpi-start to distribute
          the proxy when there is a shared file system.

2007-08-20  Sven Stork  <hpcstork _AT_ hlrs.de>

	* fix small ordering bug in the MPI modules for the debug output

2007-08-15  Sven Stork  <hpcstork _AT_ hlrs.de>

	* add copyright header information
	* add distclean target
	* add support for user provided mpiexec/mpirun replacements
	  MPI<FLAVOUR>_MPIEXEC/MPIRUN

2007-07-24  Sven Stork  <hpcstork _AT_ hlrs.de>

	* Improve the template plugins

2007-07-23  Sven Stork  <hpcstork _AT_ hlrs.de>
